--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <h1 class="saluteText">Hi</h1>
                 </div>
                 <div class="saluteImgContainer">
-                    <img src="../Portfolio/Image/person.png" alt="" class="saluteImg" />
+                    <img src="Image/person.png" alt="" class="saluteImg" />
                 </div>
             </div>
             <div class="nameContainer">
@@ -37,9 +37,9 @@
             <h1 class="projectsTitle">Here are some of my projects</h1>
             <div class="project">
                 <div class="phone">
-                    <img src="../Portfolio/Image/phone.png" alt="" />
+                    <img src="Image/phone.png" alt="" />
                     <div class="phoneScreen">
-                        <img src="../Portfolio/Image/phoneApp.png" alt="" class="phoneApp" />
+                        <img src="Image/phoneApp.png" alt="" class="phoneApp" />
                     </div>
                 </div>
                 <div class="projectDetail">
@@ -58,9 +58,9 @@
             </div>
             <div class="project">
                 <div class="laptop">
-                    <img src="../Portfolio/Image/laptop.png" alt="" />
+                    <img src="Image/laptop.png" alt="" />
                     <div class="laptopScreen">
-                        <img src="../Portfolio/Image/laptopApp.png" alt="" class="laptopApp" />
+                        <img src="Image/laptopApp.png" alt="" class="laptopApp" />
                     </div>
                 </div>
                 <div class="projectDetail">
@@ -79,9 +79,9 @@
             </div>
             <div class="project">
                 <div class="phone">
-                    <img src="../Portfolio/Image/phone.png" alt="" />
+                    <img src="Image/phone.png" alt="" />
                     <div class="phoneScreen">
-                        <img src="../Portfolio/Image/phoneApp.png" alt="" class="phoneApp" />
+                        <img src="Image/phoneApp.png" alt="" class="phoneApp" />
                     </div>
                 </div>
                 <div class="projectDetail">
@@ -122,7 +122,7 @@
             </div>
             <div class="githubSm">
                 <a href="">
-                    <img src="../Portfolio/Image/github.png" alt="" />
+                    <img src="Image/github.png" alt="" />
                 </a>
                 <h2>Find Me on Github</h2>
             </div>
